public enum ContainerType {
    FROZEN_FOOD,
    LIQUID,
    PACKAGE
}
